--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,11 @@
 @import "tailwindcss";
 
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --font-barlow: 'Barlow Semi Condensed', sans-serif;
+  --font-nunito: 'Nunito', sans-serif;
 }
 
 @theme inline {
@@ -22,5 +25,13 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  
+}
+
+h1, h2, h3{
+  font-family: var(--font-barlow)
+}
+
+span, p {
+   font-family: var(--font-nunito)
 }
