--- a/public/styles/ForumCarousel.module.css
+++ b/public/styles/ForumCarousel.module.css
@@ -64,7 +64,8 @@
   top: 50%;
   transform: translateY(-50%);
   border: 0;
-  background: rgba(193, 190, 190, 0.5);
+  /*background: rgba(193, 190, 190, 0.5);*/
+  
   color: #fff;
   width: 50px;
   height: 50px;
@@ -73,6 +74,7 @@
   place-items: center;
   cursor: pointer;
   font-size: 30px;
+  
 
 }
 .arrow:hover{
@@ -80,13 +82,19 @@
     background: rgba(86, 85, 85, 0.5);
 }
 .arrowLeft { 
+    transition: all 0.3s ease-in-out;
     left: 8px; 
+    background: linear-gradient(90deg, #ffff00, #121314,#121314 );
+    
 }
 .arrowRight { 
-    right: 8px; 
+    right: 8px;
+    background: linear-gradient(90deg, #121314,#121314, #ffff00); 
+    transition: all 0.3s ease-in-out;
 }
 .arrow:active { 
     transform: translateY(-50%) scale(0.98); 
+     
 }
 
 
